se modifica tamaño de botones

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 
     <div id="players-operador">
       <section id="players-operador__dino">
-        <button type="button"> - </button>
-        <button type="button">+</button>
+        <button id="op-rest" type="button"> - </button>
+        <button id="op-add" type="button">+</button>
         <br>
         <button id="pay-half" type="button">Half</button>
 
       </section>
       <p id="input-numbers" type="number">
       <section id="players-operador__oponent">
-        <button type="button"> - </button>
-        <button type="button">+</button>
+        <button id="op-rest" type="button"> - </button>
+        <button id="op-add" type="button">+</button>
         <br>
         <button id="pay-half" type="button">Half</button>
       </section>
