--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
 
     <div id="players-operador">
       <section id="players-operador__dino">
-        <button id="op-rest" type="button"> - </button>
-        <button id="op-add" type="button">+</button>
-        <br>
-        <button id="pay-half" type="button">Half</button>
+        <button class="button-dino-rest" id="dino-rest" type="button"> - </button>
+        <button class="button-dino-add" id="dino-add" type="button">+</button>
+        <br> 
+        <button class="button-dino-half" id="pay-half" type="button">Half</button>
 
       </section>
-      <p id="input-numbers" type="number">
+      <p id="input-numbers"></p>
+
       <section id="players-operador__oponent">
-        <button id="op-rest" type="button"> - </button>
-        <button id="op-add" type="button">+</button>
+        <button class="button-op-rest" id="op-rest" type="button"> - </button>
+        <button class="button-op-add" id="op-add" type="button">+</button>
         <br>
-        <button id="pay-half" type="button">Half</button>
+        <button class="button-op-half" id="pay-half" type="button">Half</button>
       </section>
     </div>
       
@@ -42,9 +43,9 @@
         <br>
 
         <section class="dinomorphia-button">
-          <button id="kentre-atk" type="button">Kentre atk</button>
-          <button id="punisher-atk" type="button">Punisher atk</button>
-          <button id="kentre-rex" type="button">Dmg-Kentre&Rex</button>
+          <button class="button-kentre-atk" id="kentre-atk" type="button">Kentre atk</button>
+          <button class="button-punisher-atk" id="punisher-atk" type="button">Punisher atk</button>
+          <button class="button-kentre-dmg" id="kentre-rex" type="button">Dmg-Kentre&Rex</button>
         </section>
         <section class="dinomorphia-results">
           <p class="dinomorphia-result__kentre"></p>
@@ -54,23 +55,23 @@
       <br>
 
       <section class="correctors">
-        <button type="button">Back</button>
-        <button type="button">Clear</button>
+        <button class="button-back" type="button">Back</button>
+        <button class="button-clear" type="button">Clear</button>
       </section>
 
         <section id="calculator-numbers">
-          <button type="button">1</button>
-          <button type="button">2</button>
-          <button type="button">3</button>
-          <button type="button">4</button>
-          <button type="button">5</button>
-          <button type="button">6</button>
-          <button type="button">7</button>
-          <button type="button">8</button>
-          <button type="button">9</button>
-          <button type="button">0</button>
-          <button type="button">00</button>
-          <button type="button">000</button>
+          <button class="button-1" type="button">1</button>
+          <button class="button-2" type="button">2</button>
+          <button class="button-3" type="button">3</button>
+          <button class="button-4" type="button">4</button>
+          <button class="button-5" type="button">5</button>
+          <button class="button-6" type="button">6</button>
+          <button class="button-7" type="button">7</button>
+          <button class="button-8" type="button">8</button>
+          <button class="button-9" type="button">9</button>
+          <button class="button-0" type="button">0</button>
+          <button class="button-00" type="button">00</button>
+          <button class="button-000" type="button">000</button>
         </section>
           
     </section>
