se añade la prop readonly al display

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button class="button-dino-half" id="pay-half" type="button">Half</button>
 
       </section>
-      <p id="input-numbers"></p>
+      <input id="input-numbers" type="text" readonly value=""></>
 
       <section id="players-operador__oponent">
         <button class="button-op-rest" id="op-rest" type="button"> - </button>
