--- a/index.html
+++ b/index.html
@@ -60,21 +60,22 @@
       </section>
 
         <section id="calculator-numbers">
-          <button class="button-1" type="button">1</button>
-          <button class="button-2" type="button">2</button>
-          <button class="button-3" type="button">3</button>
-          <button class="button-4" type="button">4</button>
-          <button class="button-5" type="button">5</button>
-          <button class="button-6" type="button">6</button>
-          <button class="button-7" type="button">7</button>
-          <button class="button-8" type="button">8</button>
-          <button class="button-9" type="button">9</button>
-          <button class="button-0" type="button">0</button>
-          <button class="button-00" type="button">00</button>
-          <button class="button-000" type="button">000</button>
+          <button value="1" class="button-1" type="button">1</button>
+          <button value="2" class="button-2" type="button">2</button>
+          <button value="3" class="button-3" type="button">3</button>
+          <button value="4" class="button-4" type="button">4</button>
+          <button value="5" class="button-5" type="button">5</button>
+          <button value="6" class="button-6" type="button">6</button>
+          <button value="7" class="button-7" type="button">7</button>
+          <button value="8" class="button-8" type="button">8</button>
+          <button value="9" class="button-9" type="button">9</button>
+          <button value="0" class="button-0" type="button">0</button>
+          <button value="00" class="button-00" type="button">00</button>
+          <button value="000" class="button-000" type="button">000</button>
         </section>
           
     </section>
     </main>
+    <script src="./index.js"></script>
 </body>
 </html>
