se modifica un div por un input para mejorar codigo

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <h1> DINOMORPHIA CALCULATOR</h1>
   <main>
     <section class="lifepoints-players">
-      <div class="lifepoints-Dinoplayer">8000</div>
-      <div class="lifepoints-oponent">8000</div>
+      <input type="text" readonly class="lifepoints-Dinoplayer" value="8000"></input>
+      <input type="text" readonly class="lifepoints-oponent" value="8000">
     </section>
 
 
