se agrega funcionalidad de suma

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <h1> DINOMORPHIA CALCULATOR</h1>
   <main>
     <section class="lifepoints-players">
-      <input type="text" readonly class="lifepoints-Dinoplayer" value="8000"></input>
-      <input type="text" readonly class="lifepoints-oponent" value="8000">
+      <input type="number" readonly class="lifepoints-dinoplayer" value="8000"></input>
+      <input type="number" readonly class="lifepoints-oponent" value="8000">
     </section>
 
 
     <div id="players-operador">
-      <section id="players-operador__dino">
+      <section id="players-operador__dino"> 
         <button class="button-dino-rest" id="dino-rest" type="button"> - </button>
         <button class="button-dino-add" id="dino-add" type="button">+</button>
         <br> 
