se corrige el display en 0 despues de una operacion

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <br>
 
         <section class="dinomorphia-button">
-          <button class="button-kentre-atk" id="kentre-atk" type="button">Kentre atk</button>
+          <button class="button-kentre-atk" id="kentre-atk" type="button">Kentregina atk</button>
           <button class="button-punisher-atk" id="punisher-atk" type="button">Punisher atk</button>
           <button class="button-kentre-dmg" id="kentre-rex" type="button">Dmg-Kentre&Rex</button>
         </section>
