se añaden botones back, reset y se modifica el back anterior por C

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         <button class="button-dino-half" id="pay-half" type="button">Half</button>
 
       </section>
-      <input id="input-numbers" type="text" readonly value=""></>
+      <section class="display-backs">
+
+        <input id="input-numbers" type="text" readonly value=""></>
+        <button class="button-back-dino">Back</button>
+        <button class="button-reset">Reset</button>
+        <button class="button-back.oponent">Back</button>
+      </section>
 
       <section id="players-operador__oponent">
         <button class="button-op-rest" id="op-rest" type="button"> - </button>
@@ -55,7 +61,7 @@
       <br>
 
       <section class="correctors">
-        <button class="button-back" type="button">Back</button>
+        <button class="button-c" type="button">C</button>
         <button class="button-clear" type="button">Clear</button>
       </section>
 
