se corrige manera de hacer back, se agrega seccion de victoria

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 </head>
 <body>
   <h1> DINOMORPHIA CALCULATOR</h1>
-  <main>
+  <main class="main-content ">
+    
+    <section class="win-dinomorphia inactive">
+      <h3>Ha ganado el dinochato</h3>
+      <button>Aceptar</button>
+    </section>
+
 
     <!-- seccion de puntos de vida -->
     <section class="lifepoints-players">
@@ -39,7 +45,7 @@
         <input id="input-numbers" type="text" readonly value=""></>
         <button class="button-back-dino">Back</button>
         <button class="button-reset">Reset</button>
-        <button class="button-back.oponent">Back</button>
+        <button class="button-back-oponent">Back</button>
       </section>
 
 
