--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
         <br>
 
         <section class="dinomorphia-button">
-          <button class="button-kentre-atk" id="kentre-atk" type="button">Kentregina atk</button>
-          <button class="button-punisher-atk" id="punisher-atk" type="button">Punisher atk</button>
-          <button class="button-kentre-dmg" id="kentre-rex" type="button">Dmg-Kentre&Rex</button>
+          <button class="button-kentre-atk"  type="button">Kentregina atk</button>
+          <div class="punisher-contain">
+            <button class="button-punisher-reset punisher" type="button">Reset Punisher</button>
+            <button class="button-punisher-atk punisher"  type="button">Punisher atk</button>
+          </div>
+          <button class="button-kentre-dmg"  type="button">Dmg-Kentre&Rex</button>
         </section>
         <section class="dinomorphia-results">
           <p class="dinomorphia-result__kentre"></p>
