se agregafuncion al boton de aceptar tras terminar duelo y bug en boton 000

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <h1> DINOMORPHIA CALCULATOR</h1>
   <main class="main-content ">
     
-    <section class="win-dinomorphia inactive">
-      <h3>Ha ganado el dinochato</h3>
-      <button>Aceptar</button>
+    <section class="win-msg inactive">
+      <h3 class="win-msg_content"></h3>
+      <button class="reset-for-win">Aceptar</button>
     </section>
 
 
